tests/bad/enum-member-redeclare-var.pas
program enum_member_redeclare_var;

type
    Color = (Red, Green);

var
    red;

begin
end.
